--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -43,26 +43,26 @@
         "print(\"Load at where maximum efficiency = \",Max_efficiency)"
       ],
       "metadata": {
+        "id": "GwmvcbVIkgDJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GwmvcbVIkgDJ",
-        "outputId": "876cded8-b022-4191-a6b2-c6312370f6ea"
+        "outputId": "0b2d8dc5-16b0-4509-88a0-876c3ee79096"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the Rating of transformer in Voltamphere = 5000\n",
-            "Enter the power factor of transformer = 1\n",
-            "Enter the loading of transformer = 1\n",
-            "Enter the Full load copper losses of transformer in Watts = 800\n",
-            "Enter the core losses of Transformer in Watts = 100\n",
-            "copper losses of transformer at loading = 1600.0\n",
-            "Efficiency of transformer = 74.6268656716418 %\n",
-            "Load at where maximum efficiency =  0.3535533905932738\n"
+            "Enter the Rating of transformer in Voltamphere = 100\n",
+            "Enter the power factor of transformer = 0.9\n",
+            "Enter the loading of transformer = 0.5\n",
+            "Enter the Full load copper losses of transformer in Watts = 50\n",
+            "Enter the core losses of Transformer in Watts = 25\n",
+            "copper losses of transformer at loading = 50.0\n",
+            "Efficiency of transformer = 37.5 %\n",
+            "Load at where maximum efficiency =  0.7071067811865476\n"
           ]
         }
       ]
